--- a/Pallas/pallas-base/pom.xml
+++ b/Pallas/pallas-base/pom.xml
@@ -8,20 +8,20 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>pallas-server</artifactId>
+  <artifactId>pallas-base</artifactId>
   <name>${project.artifactId}</name>
-  <packaging>pom</packaging>
   <modules>
-    <module>pallas-cloud-server</module>
-    <module>pallas-conf-server</module>
-    <module>pallas-server-common</module>
+    <module>pallas-common</module>
+    <module>pallas-api</module>
   </modules>
+  <packaging>pom</packaging>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
     </dependency>
   </dependencies>
+
 
 </project>
