--- a/Pallas/pallas-server/pallas-server-common/pom.xml
+++ b/Pallas/pallas-server/pallas-server-common/pom.xml
@@ -3,24 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>pallas</artifactId>
+    <artifactId>pallas-server</artifactId>
     <groupId>com.pallas</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>pallas-server</artifactId>
-  <name>${project.artifactId}</name>
-  <packaging>pom</packaging>
-  <modules>
-    <module>pallas-cloud-server</module>
-    <module>pallas-conf-server</module>
-    <module>pallas-server-common</module>
-  </modules>
+
+  <artifactId>pallas-server-common</artifactId>
 
   <dependencies>
     <dependency>
+      <groupId>com.pallas</groupId>
+      <artifactId>pallas-common</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
   </dependencies>
 
