--- a/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
@@ -16,6 +16,22 @@
       <groupId>com.pallas</groupId>
       <artifactId>pallas-user-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
+      <artifactId>pallas-base-cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
+      <artifactId>pallas-base-batis</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
