--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -17,8 +17,10 @@ spring:
         uri: lb://pallas-cloud-sample
         predicates:
         - Path=/sample/**
-        filters:
-          - StripPrefix=1
+      - id: user_route
+        uri: lb://pallas-cloud-user
+        predicates:
+        - Path=/api/user/**
 management:
   endpoint:
     gateway:
