--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/pom.xml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/pom.xml
@@ -21,6 +21,14 @@
       <groupId>com.pallas</groupId>
       <artifactId>pallas-server-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
   </dependencies>
 
 
