--- a/Pallas/pallas-server/pallas-server-common/pom.xml
+++ b/Pallas/pallas-server/pallas-server-common/pom.xml
@@ -14,11 +14,15 @@
   <dependencies>
     <dependency>
       <groupId>com.pallas</groupId>
-      <artifactId>pallas-common</artifactId>
+      <artifactId>pallas-base-common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
+      <artifactId>pallas-base-api</artifactId>
     </dependency>
   </dependencies>
 
