--- a/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
@@ -32,6 +32,10 @@
       <groupId>com.pallas</groupId>
       <artifactId>pallas-base-batis</artifactId>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
