--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/src/main/resources/bootstrap.yml
@@ -1,5 +1,9 @@
 server:
   port: 8000
+pls:
+  auth:
+    expire-time: 1000
+    refresh-time: 180
 spring:
   application:
     name: pallas-cloud-user
@@ -27,7 +31,7 @@ spring:
           delay: 1000
   redis:
     host: localhost
-    password: 123456
+#    password: 123456
     lettuce:
       pool:
         max-active: 8
