--- a/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
@@ -10,6 +10,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>pallas-user-api</artifactId>
+  <dependencies>
+  </dependencies>
 
 
 </project>
