--- a/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-service/pom.xml
@@ -18,15 +18,7 @@
     </dependency>
     <dependency>
       <groupId>com.pallas</groupId>
-      <artifactId>pallas-base-cache</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
+      <artifactId>pallas-user-auth</artifactId>
     </dependency>
     <dependency>
       <groupId>com.pallas</groupId>
@@ -35,6 +27,10 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
