--- a/Pallas/pallas-module/pallas-user/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pom.xml
@@ -15,6 +15,8 @@
   <modules>
     <module>pallas-user-service</module>
     <module>pallas-user-api</module>
+    <module>pallas-user-auth</module>
+    <module>pallas-user-cloud-api</module>
   </modules>
 
 
