--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
@@ -22,6 +22,10 @@
     </dependency>
     <dependency>
       <groupId>com.pallas</groupId>
+      <artifactId>pallas-user-auth</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
       <artifactId>pallas-user-api</artifactId>
     </dependency>
   </dependencies>
