--- a/Pallas/pom.xml
+++ b/Pallas/pom.xml
@@ -27,6 +27,8 @@
     <pallas-base-batis.version>1.0.0-SNAPSHOT</pallas-base-batis.version>
     <pallas-base-cache.version>1.0.0-SNAPSHOT</pallas-base-cache.version>
     <pallas-user-api.version>1.0.0-SNAPSHOT</pallas-user-api.version>
+    <pallas-user-cloud-api.version>1.0.0-SNAPSHOT</pallas-user-cloud-api.version>
+    <pallas-user-auth.version>1.0.0-SNAPSHOT</pallas-user-auth.version>
     <pallas-user-service.version>1.0.0-SNAPSHOT</pallas-user-service.version>
     <pallas-server-common.version>1.0.0-SNAPSHOT</pallas-server-common.version>
     <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
@@ -38,6 +40,7 @@
     <dynamic-datasource.version>3.2.0</dynamic-datasource.version>
     <shardingsphere.version>4.1.1</shardingsphere.version>
     <druid.version>1.1.22</druid.version>
+    <jjwt.version>0.11.2</jjwt.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -72,6 +75,16 @@
         <groupId>com.pallas</groupId>
         <artifactId>pallas-user-api</artifactId>
         <version>${pallas-user-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.pallas</groupId>
+        <artifactId>pallas-user-cloud-api</artifactId>
+        <version>${pallas-user-cloud-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.pallas</groupId>
+        <artifactId>pallas-user-auth</artifactId>
+        <version>${pallas-user-auth.version}</version>
       </dependency>
       <dependency>
         <groupId>com.pallas</groupId>
@@ -124,6 +137,21 @@
         <groupId>com.alibaba</groupId>
         <artifactId>druid-spring-boot-starter</artifactId>
         <version>${druid.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-api</artifactId>
+        <version>${jjwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>${jjwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-jackson</artifactId>
+        <version>${jjwt.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
