--- a/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
@@ -11,6 +11,14 @@
 
   <artifactId>pallas-user-api</artifactId>
   <dependencies>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
   </dependencies>
 
 
