--- a/Pallas/pom.xml
+++ b/Pallas/pom.xml
@@ -187,6 +187,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
