--- a/Juno/tower/package.json
+++ b/Juno/tower/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ant-design/colors": "^4.0.5",
+    "jsencrypt": "^3.0.0-rc.1",
     "ng-zorro-antd": "^9.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
