--- a/Pallas/pallas-module/pallas-user/pallas-user-cloud-api/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-cloud-api/pom.xml
@@ -23,6 +23,10 @@
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
   </dependencies>
 
 
