--- a/Pallas/pallas-base/pallas-base-batis/pom.xml
+++ b/Pallas/pallas-base/pallas-base-batis/pom.xml
@@ -28,6 +28,10 @@
       <groupId>org.apache.shardingsphere</groupId>
       <artifactId>sharding-jdbc-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
   </dependencies>
 
 
