--- a/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
+++ b/Pallas/pallas-module/pallas-user/pallas-user-api/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-annotation</artifactId>
+    </dependency>
   </dependencies>
 
 
