--- a/Juno/tower/package.json
+++ b/Juno/tower/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ant-design/colors": "^4.0.5",
+    "echarts": "^4.9.0",
     "jsencrypt": "^3.0.0-rc.1",
     "ng-zorro-antd": "^10.0.1",
+    "ngx-echarts": "^5.1.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
