--- a/Pallas/pallas-base/pallas-base-cache/pom.xml
+++ b/Pallas/pallas-base/pallas-base-cache/pom.xml
@@ -17,6 +17,11 @@
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.latencyutils</groupId>
+      <artifactId>LatencyUtils</artifactId>
+      <version>2.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
     </dependency>
