--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -2,6 +2,14 @@
 spring:
   application:
     name: pallas-cloud-gateway
+  redis:
+    host: localhost
+    lettuce:
+      pool:
+        max-active: 8
+        min-idle: 0
+        max-idle: 8
+        max-wait: 30
   cloud:
     loadbalancer:
       ribbon:
