--- a/Pallas/pallas-base/pallas-base-common/pom.xml
+++ b/Pallas/pallas-base/pallas-base-common/pom.xml
@@ -14,6 +14,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
