--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
@@ -8,7 +8,6 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
   <artifactId>pallas-cloud-gateway</artifactId>
 
   <dependencies>
@@ -82,6 +81,27 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.10</version>
+        <executions>
+          <execution>
+            <id>default</id>
+            <goals>
+              <goal>build</goal>
+              <goal>push</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <repository>172.17.0.1:5000//${project.artifactId}</repository>
+          <tag>${project.version}</tag>
+          <buildArgs>
+            <PROJECT_NAME>${project.build.finalName}.zip</PROJECT_NAME>
+          </buildArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
