--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
@@ -3,8 +3,8 @@ MAINTAINER Jax "jax94@qq.com"
 ENV REFRESHED_AT 2020-11-19
 
 EXPOSE 8070
-ENV consul="127.0.0.1"
-ENV consul_token=""
+ARG CONSUL_HOST
+ARG CONSUL_TOKEN
 ARG PROJECT_NAME
 ENV HOME_PATH /home
 WORKDIR $HOME_PATH
@@ -13,4 +13,4 @@ RUN unzip $PROJECT_NAME.zip
 
 WORKDIR $HOME_PATH/$PROJECT_NAME
 VOLUME ["$HOME_PATH/$PROJECT_NAME"]
-ENTRYPOINT ["./bin/start.sh", "token", "$consul", "$consul_token"]
+ENTRYPOINT ./bin/start.sh token $CONSUL_HOST $CONSUL_TOKEN
