--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
@@ -10,6 +10,9 @@ ENV HOME_PATH /home
 WORKDIR $HOME_PATH
 ADD target/$PROJECT_NAME.zip $HOME_PATH/$PROJECT_NAME.zip
 RUN unzip $PROJECT_NAME.zip
+RUN echo $CONSUL_HOST
+RUN echo $CONSUL_TOKEN
+RUN echo $PROJECT_NAME
 
 WORKDIR $HOME_PATH/$PROJECT_NAME
 VOLUME ["$HOME_PATH/$PROJECT_NAME"]
