--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
@@ -10,10 +10,7 @@ ENV HOME_PATH /home
 WORKDIR $HOME_PATH
 ADD target/$PROJECT_NAME.zip $HOME_PATH/$PROJECT_NAME.zip
 RUN unzip $PROJECT_NAME.zip
-RUN echo $CONSUL_HOST
-RUN echo $CONSUL_TOKEN
-RUN echo $PROJECT_NAME
 
 WORKDIR $HOME_PATH/$PROJECT_NAME
 VOLUME ["$HOME_PATH/$PROJECT_NAME"]
-ENTRYPOINT ./bin/start.sh token $CONSUL_HOST $CONSUL_TOKEN
+ENTRYPOINT ["sh", "-c", "./bin/start.sh token $CONSUL_HOST $CONSUL_TOKEN"]
