--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
@@ -13,4 +13,4 @@ RUN unzip $PROJECT_NAME.zip
 
 WORKDIR $HOME_PATH/$PROJECT_NAME
 VOLUME ["$HOME_PATH/$PROJECT_NAME"]
-ENTRYPOINT ["sh", "-c", "./bin/start.sh token $CONSUL_HOST $CONSUL_TOKEN"]
+ENTRYPOINT ["sh", "-c", "echo $CONSUL_HOST:$CONSUL_TOKEN"]
