--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/Dockerfile
@@ -6,6 +6,8 @@ EXPOSE 8070
 ARG CONSUL_HOST
 ARG CONSUL_TOKEN
 ARG PROJECT_NAME
+ENV CONSUL_HOST_ENV=$CONSUL_HOST
+ENV CONSUL_TOKEN_ENV=$CONSUL_TOKEN
 ENV HOME_PATH /home
 WORKDIR $HOME_PATH
 ADD target/$PROJECT_NAME.zip $HOME_PATH/$PROJECT_NAME.zip
@@ -13,4 +15,4 @@ RUN unzip $PROJECT_NAME.zip
 
 WORKDIR $HOME_PATH/$PROJECT_NAME
 VOLUME ["$HOME_PATH/$PROJECT_NAME"]
-ENTRYPOINT ["sh", "-c", "echo $CONSUL_HOST:$CONSUL_TOKEN"]
+ENTRYPOINT ./bin/start.sh token $CONSUL_HOST_ENV $CONSUL_TOKEN_ENV
