--- a/Pallas/pom.xml
+++ b/Pallas/pom.xml
@@ -218,4 +218,28 @@
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <profileActive>dev</profileActive>
+      </properties>
+    </profile>
+    <profile>
+      <id>test</id>
+      <properties>
+        <profileActive>test</profileActive>
+      </properties>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <profileActive>prod</profileActive>
+      </properties>
+    </profile>
+  </profiles>
+
 </project>
