--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: pallas-cloud-gateway
   profiles:
-    active: @profileActive@
+    active: "@profileActive@"
   cloud:
     loadbalancer:
       ribbon:
