--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/pom.xml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-user/pom.xml
@@ -47,6 +47,27 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.10</version>
+        <executions>
+          <execution>
+            <id>default</id>
+            <goals>
+              <goal>build</goal>
+              <goal>push</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <repository>registry:5000/${project.artifactId}</repository>
+          <tag>${project.version}</tag>
+          <buildArgs>
+            <PROJECT_NAME>${project.build.finalName}</PROJECT_NAME>
+          </buildArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
