--- a/Juno/tower/tsconfig.base.json
+++ b/Juno/tower/tsconfig.base.json
@@ -12,11 +12,6 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
-    "paths": {
-      "@/*": ["src/*"],
-      "@shared/*": ["src/app/shared/*"],
-      "@constants/*": ["src/constants/*"]
-    }
+    "lib": ["es2018", "dom"]
   }
 }
