--- a/Juno/tower/angular.json
+++ b/Juno/tower/angular.json
@@ -64,7 +64,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
               ]
             }
