--- a/Juno/tower/angular.json
+++ b/Juno/tower/angular.json
@@ -64,8 +64,7 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "60kb"
                 }
               ]
             }
