--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -4,19 +4,19 @@ spring:
   application:
     name: pallas-cloud-gateway
   profiles:
-    active: "@profileActive@"
+    active: @profileActive@
   cloud:
     loadbalancer:
       ribbon:
         enabled: false
     consul:
-      host: ${consul.host}
+      host: @consul.host@
       port: 8500
       discovery:
-        acl-token: ${consul.token}
+        acl-token: @consul.token@
       config:
         enabled: true
-        acl-token: ${consul.token}
+        acl-token: @consul.token@
         prefix: config
         default-context: pallas-cloud-gateway
         profile-separator: '-'
