--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/pom.xml
@@ -85,7 +85,7 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>1.4.10</version>
+        <version>${dockerfile-maven-plugin.version}</version>
         <executions>
           <execution>
             <id>default</id>
@@ -98,6 +98,7 @@
         <configuration>
           <repository>registry:5000/${project.artifactId}</repository>
           <tag>${project.version}</tag>
+          <skip>${dockerfile.skip}</skip>
           <buildArgs>
             <PROJECT_NAME>${project.build.finalName}</PROJECT_NAME>
           </buildArgs>
