--- a/Pallas/pom.xml
+++ b/Pallas/pom.xml
@@ -21,8 +21,6 @@
     <module>pallas-server</module>
   </modules>
   <properties>
-    <consul.host>127.0.01</consul.host>
-    <consul.token></consul.token>
     <java.version>1.8</java.version>
     <pallas-base-api.version>1.0.0-SNAPSHOT</pallas-base-api.version>
     <pallas-base-common.version>1.0.0-SNAPSHOT</pallas-base-common.version>
@@ -44,6 +42,10 @@
     <flyway.version>6.5.0</flyway.version>
     <druid.version>1.1.22</druid.version>
     <jjwt.version>0.11.2</jjwt.version>
+    <dockerfile-maven-plugin.version>1.4.10</dockerfile-maven-plugin.version>
+    <dockerfile.skip>true</dockerfile.skip>
+    <consul.host>127.0.0.1</consul.host>
+    <consul.token></consul.token>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -207,6 +209,27 @@
   </dependencies>
 
   <build>
+    <resources>
+      <!-- springboot 默认只替换application*.[yml,yaml,properties]相关文件,我们项目中在bootstrap中需要替换配置中心等相关变量 -->
+      <resource>
+        <filtering>true</filtering>
+        <directory>${basedir}/src/main/resources</directory>
+        <includes>
+          <include>**/bootstrap*.yml</include>
+          <include>**/bootstrap*.yaml</include>
+          <include>**/bootstrap*.properties</include>
+        </includes>
+      </resource>
+      <!-- 必须成组否则文件夹下其他资源无法拷贝 -->
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <excludes>
+          <exclude>**/bootstrap*.yml</exclude>
+          <exclude>**/bootstrap*.yaml</exclude>
+          <exclude>**/bootstrap*.properties</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
