--- a/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-cloud-server/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -34,6 +34,10 @@ spring:
         uri: lb://pallas-cloud-sample
         predicates:
         - Path=/api/sample/**
+      - id: file_route
+        uri: lb://pallas-cloud-file
+        predicates:
+        - Path=/api/file/**
       - id: user_route
         uri: lb://pallas-cloud-user
         predicates:
