--- a/Pallas/pallas-base/pallas-base-batis/pom.xml
+++ b/Pallas/pallas-base/pallas-base-batis/pom.xml
@@ -32,6 +32,10 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>p6spy</groupId>
+      <artifactId>p6spy</artifactId>
+    </dependency>
   </dependencies>
 
 
