--- a/Pallas/pallas-module/pallas-file/pallas-file-api/pom.xml
+++ b/Pallas/pallas-module/pallas-file/pallas-file-api/pom.xml
@@ -15,6 +15,10 @@
       <groupId>com.baomidou</groupId>
       <artifactId>mybatis-plus-annotation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
+      <artifactId>pallas-user-api</artifactId>
+    </dependency>
   </dependencies>
 
 
