--- a/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-captcha/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-captcha/src/main/resources/bootstrap.yml
@@ -20,7 +20,7 @@ spring:
         enabled: true
         acl-token: @consul.token@
         prefix: config
-        default-context: pallas-cloud-user
+        default-context: pallas-cloud-captcha
         profile-separator: '-'
         format: YAML
         data-key: data
