--- a/Pallas/pallas-module/pallas-captcha/pallas-captcha-api/pom.xml
+++ b/Pallas/pallas-module/pallas-captcha/pallas-captcha-api/pom.xml
@@ -10,6 +10,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>pallas-captcha-api</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+    </dependency>
+  </dependencies>
 
 
 </project>
