--- a/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-user/pom.xml
+++ b/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-user/pom.xml
@@ -19,6 +19,10 @@
     </dependency>
     <dependency>
       <groupId>com.pallas</groupId>
+      <artifactId>pallas-captcha-cloud-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pallas</groupId>
       <artifactId>pallas-server-cloud-common</artifactId>
     </dependency>
     <dependency>
