--- a/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/Pallas/pallas-server/pallas-server-cloud/pallas-cloud-gateway/src/main/resources/bootstrap.yml
@@ -38,6 +38,10 @@ spring:
         uri: lb://pallas-cloud-captcha
         predicates:
         - Path=/api/captcha/**
+      - id: dashboard_route
+        uri: lb://pallas-cloud-dashboard
+        predicates:
+        - Path=/api/dashboard/**
       - id: file_route
         uri: lb://pallas-cloud-file
         predicates:
