--- a/Juno/tower/package.json
+++ b/Juno/tower/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "@ant-design/colors": "^4.0.5",
-    "echarts": "^4.9.0",
+    "@ant-design/colors": "^5.0.0",
+    "echarts": "^5.0.0",
     "jsencrypt": "^3.0.0-rc.1",
-    "ng-zorro-antd": "^10.1.0",
+    "monaco-editor": "^0.21.2",
+    "ng-zorro-antd": "^10.2.0",
     "ngx-echarts": "^5.1.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -32,9 +33,9 @@
     "@angular-devkit/build-angular": "~0.1000.4",
     "@angular/cli": "~10.0.4",
     "@angular/compiler-cli": "~10.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
