--- a/Pallas/pallas-server/pallas-server-cloud/pom.xml
+++ b/Pallas/pallas-server/pallas-server-cloud/pom.xml
@@ -17,6 +17,7 @@
     <module>pallas-cloud-user</module>
     <module>pallas-cloud-file</module>
     <module>pallas-cloud-captcha</module>
+    <module>pallas-cloud-dashboard</module>
   </modules>
   <dependencies>
     <dependency>
